# rvy

./: Cargo.toml  LICENSE  README.md
src/: context.rs  main.rs
src/generator/: adapter.rs  data.rs  dispatch.rs  handler.rs  migration.rs  mod.rs  project.rs  repository.rs  service.rs  test.rs  usecase.rs
templates/: data.rs.tpl  entity.rs.tpl  error.rs.tpl  handler.rs.tpl  repository.rs.tpl  service.rs.tpl  usecase.rs.tpl
templates/adapter/: mongodb.rs.tpl  mysql.rs.tpl  postgres.rs.tpl  sqlite.rs.tpl
templates/config/: database.rs.tpl
templates/examples/: USAGE.md.tpl  main_with_crud.rs.tpl
templates/factory/: repository_factory.rs.tpl
templates/migrations/: mongodb_setup.rs.tpl  mysql_create_table.sql.tpl  postgres_create_table.sql.tpl  sqlite_create_table.sql.tpl
templates/project/: Cargo.toml.tpl  lib.rs.tpl  main.rs.tpl
templates/tests/: common.rs.tpl  integration_test.rs.tpl  service_test.rs.tpl
