[package]
name = "rvy"
version = "0.1.2"
edition = "2021"

description = "A modular Rust CLI framework for generating services, tools, and project scaffolds."
license = "MIT"

repository = "https://github.com/reverny/rvy"
homepage = "https://github.com/reverny/rvy"
documentation = "https://docs.rs/rvy"

readme = "README.md"

keywords = [
  "cli",
  "framework",
  "generator",
  "rust",
  "codegen"
]

categories = [
  "command-line-utilities",
  "development-tools"
]

authors = ["reverny"]

[[bin]]
name = "rvy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
